--- a/index.css
+++ b/index.css
@@ -44,8 +44,7 @@ header{
 }
 .header-name{
     font-weight: 500;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    letter-spacing: 0.1rem;
+    font-family: "Inter", sans-serif;
 }
 .header-search{
     display: flex;
@@ -74,11 +73,13 @@ header{
 .header-search input{
     width: 100%;
     background-color: #171717;
+    
 }
 .header-search input{
     border: none;
     color: #757575;
     cursor: pointer;
+    font-family: "Inter", sans-serif;
 }
 .header-profile{
     display: flex;
@@ -95,8 +96,157 @@ header{
     font-size: 0.8rem;
     letter-spacing: 0.1rem;
 }
+/* MAİN */
+main{
+    border: 1px solid #171717;
+    display: flex;
+}
+.main-sidebar{
+    background-color: #171717;
+    width: 13%;
+    padding: 1rem 0.5rem;
+    border-right: 1px solid #333;
+}
+.main-menu{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 0.5rem;
+}
+.main-menu a{
+    text-decoration: none;
+    color: #b3b3b3;
+    font-family: "Inter", sans-serif;
+    font-size: 0.8rem;
+    padding: 0.5rem;
+    border: 1px solid transparent;
+}
+.main-sidebar a:hover{
+    color: #fff;
+    border: 1px solid #1DB954;
+    border-radius: 0.4rem;
+}
+.main-content{
+    width: 87%;
+    background-color: #131313;
+    display: flex;
+    justify-content: center;
+}
+.main-content-items{
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    margin: 1rem auto;
+    gap: 1rem;
+}
 
+.main-content-item{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+.main-content-item h2 {
+    font-family: "Inter", sans-serif;
+    font-size: 1.2rem;
+}
+.main-content-cards{
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+.main-content-card{
+    display: flex;
+    flex-direction: column;
+    background-color: #171717;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    border: 1px solid #333;
+    cursor: pointer;
+    transition: transform 0.5s ease-in-out;
+}
+.main-content-card:hover{
+    transform: translateY(-5px)
+}
+.main-content-card:hover{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+.main-content-card:first-child{
+    align-items: center;
+}
+.main-content-card img{
+    width: 150px;
+    height: 130px;
+    border-radius: 0.5rem;
+    object-fit: cover;
+}
+.list-inform{
+    padding: 0.5rem;
+}
+.list-inform h4{
+    color: #fff;
+    font-weight: 300;
+    font-size: 0.9rem;
+    font-family: "Inter", sans-serif;
+}
+.list-inform p{
+    color: #b3b3b3;
+    font-size: 0.8rem;
+    width: 100%;
+    font-family: "Nunito", sans-serif;
+    margin-top: 0.5rem;
+}
+.albums:first-child{
+    align-items: flex-start;
+}
+.albums img{
+    width: 150px;
+    height: 130px;
+    object-fit: cover;
+}
+table {
+    width: 100%;
+    border-collapse: collapse;
+    background-color: #181818;
+    border-radius: 0.5rem;
+}
+thead {
+    font-family: 'Rubik', sans-serif;
+    font-size: 1rem;
+    color: #b3b3b3;
+    text-align: left;
+    background-color: #181818;
+}
+thead tr th:last-child {
+  text-align: right;
+}
+thead th {
+    padding: 0.5rem 1rem;
+}
+tbody td {
+    padding: 0.5rem 1rem;
+    font-family: 'Nunito', sans-serif;
+    font-size: 0.9rem;
+    color: #eaeaea;
+    border-top: 1px solid #282828;
+}
+tbody td:hover{
+    color: #fff;
+    cursor: pointer;
+}
+tbody tr:hover {
+    background-color: #282828;
+}
 
+tbody td:first-child {
+    width: 40px;
+    color: #b3b3b3;
+    text-align: center;
+}
+
+tbody td:last-child {
+    text-align: right;
+    color: #b3b3b3;
+}
 @media (max-width:500px){
     .header-app{display: none;}
 }
@@ -113,7 +263,7 @@ menu bar:#fff
 sağ profil:#333333
 sağ ğrofil yazı:#dbdbdb
 
-sol side bar blam : #171717
+sol side bar  : #171717
 logo yeşil : #1eba55 
 
 <i class="fa-regular fa-bars"></i>
